--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -25,6 +25,6 @@ jobs:
         python -m pip install --upgrade pip
     - name: Lint with flake8
       run: |
-        pip install flake8
+        pip install pylint
         # stop the build if there are Python syntax errors or undefined names
-        flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
+        pylint *.py
